# PARDON

./: .dockerignore  .env.template  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.app.yml  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml  release-please-config.json  setup_dvc.sh
.dvc/: config  config.local.example
.github/workflows/: cd-ghcr.yml  ci.yml  docs-deploy.yml  hardening-checks.yml  lint.yml  module_tests.yaml  release-please.yml  tests-dvc.yml
anomaly_detection/: __init__.py  config.py  dataloader.py  dataset.py  features.py  plots.py
anomaly_detection/modeling/: chp_score.py  models.py  predict.py  train.py
anomaly_detection/monitoring/: __init__.py  drift.py  metrics.py  mlflow_exporter.py
anomaly_detection/orchestration/: airflow_tasks.py
dags/: anomaly_pipeline_dag.py
data/: .gitignore  valve1.dvc
deploy/argocd/: application.yaml
deploy/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
deploy/k8s/base/: configmap.yaml  deployment.yaml  service.yaml
deploy/k8s/minikube/: api-deployment.yaml  configmap.yaml  ingress.yaml  namespace.yaml  postgres.yaml  ui-deployment.yaml
deploy/k8s/overlays/argocd/: image-pull-secrets.yaml  kustomization.yaml
deploy/k8s/overlays/minikube/: kustomization.yaml
docs/: cd-argocd.md  mkdocs.yml
docs/docs/: dataset-skab.md  getting-started.md  index.md  mlflow.md  models.md  monitoring.md  publish-docs.md  serving.md
models/: models.dvc
monitoring/grafana/dashboards/: drift-artifacts.json  mlflow-quality.json  mlflow-static-overview.json  model-grouped-experiments.json  nab-analysis.json  operational-health.json  recent-runs.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
scripts/: k8s-port-forward.sh
services/api/: Dockerfile  openapi.json
services/api/app/: __init__.py  db.py  main.py  models.py  schemas.py  services.py
services/api/app/core/: settings.py
services/api/app/routers/: experiments.py  health.py  notifications.py  predict.py  retrain.py
services/api/migrations/: env.py
services/api/migrations/versions/: 20260421_000001_initial_schema.py  20260421_000002_jsonb_and_enums.py
services/ui/: Dockerfile  package-lock.json  package.json
services/ui/app/: api.ts  globals.css  layout.tsx  page.tsx
services/ui/app/experiments/: page.tsx
services/ui/app/experiments/[runId]/: page.tsx
services/ui/app/notifications/: page.tsx
services/ui/app/predictions/: page.tsx
services/ui/app/predictions/runs/[requestId]/: page.tsx
services/ui/components/: InferencePanel.tsx  Nav.tsx  PredictionRunChart.tsx  RetrainPanel.tsx
services/ui/lib/: api-client.ts
tests/: test_api_integration.py  test_data.py  test_modules_unit.py
